# anchor-token-project

./: .gitignore  Anchor.toml  package.json
app/: package.json
app/components/: agent-buy-token.tsx  agent-by-token.tsx  agent-return-token.tsx  button-deploy-vault.tsx  claim-or-refund.tsx  finalize.tsx  mint-transfer-token.tsx  set-treasury.tsx  unlock-token.tsx
app/components/mint-nft/: helper.ts  index.tsx
app/lib/: helpers.ts
app/pages/: _app.tsx  index.tsx  minimal-setup.tsx
app/src/: App.tsx
programs/realbox-smart-contract-solana/: Cargo.toml
programs/realbox-smart-contract-solana/src/: errors.rs  lib.rs  utils.rs
programs/realbox-smart-contract-solana/src/instructions/: mod.rs  realbox_nft.rs  realbox_vault.rs  realbox_vault_factory.rs  sol-nft.rs
programs/realbox-smart-contract-solana/src/schema/: mod.rs  realbox_vault_state.rs  token.rs
programs/realbox-smart-contract-solana/src/state/: mod.rs  realbox_vault.rs  token.rs
tests/: realbox-smart-contract-solana.ts
