[package]
name = "realbox-smart-contract-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "realbox_smart_contract_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
ethnum = "1.3.2"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
